# statax

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt
examples/: intermediates.ipynb  stateful.ipynb
src/statax/: __init__.py  caching.py  config.py  context.py  primitives.py  types.py  util.py
src/statax/interpreters/: common.py  inters.py  stateful.py
tests/statax/: cache_test.py  config_test.py  inters_test.py  stateful_test.py
